learn-ingress/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-deploy-(nama student)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise-deploy-(nama student)
  template:
    metadata:
      labels:
        app: exercise-deploy-(nama student)
    spec:
      containers:
      - name: exercise-deploy-(nama student)
        image: hashicorp/http-echo
        args: ["-text=Halo dari Echo Server (nama student)!"]
        ports:
        - containerPort: 5678
