learn-ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: (nama panggilan)-service
spec:
  selector:
    app: (nama panggilan)-deployment
  ports:
    - port: 80
      targetPort: 80
