learn-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: (nama ingress anda)
  namespace: student-workspace
spec:
  ingressClassName: traefik # Tidak boleh diganti
  rules:
  - host: rafi.exercise.apps.k3s.zauqilab.com # ganti rafi dengan nama panggilan anda
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: (nama service anda)
            port:
              number: 80
